--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ span.spbottom {
 }
 .container-fluid .row {
     padding: 0 1rem ;
+    align-items: center;
 }
 
 .row {
@@ -292,12 +293,12 @@ span.spbottom {
 
    .banner-heading h1 {
     font-family:OpenSansSemi ;
-    font-size: 66px;
+    font-size: 55px;
     line-height: 1.2;
    }
    .banner-heading h1 .uniqueH1 {
     font-family:OpenSansSemi ;
-    font-size: 45px;
+    font-size: 40px;
     color: black;
    }
    
@@ -366,6 +367,7 @@ span.spbottom {
     border: 1px solid #e1e1e1;
     /* box-shadow: 1px 5px 9px rgba(211, 211, 211, .7); */
     border-radius: 5px;
+    background-color: #fff;
 }
 .banner-checkicons {
     padding-top: 1rem;
@@ -462,7 +464,7 @@ span.spbottom {
     .sec2-Topnotch .splide__slide img {
         width: 100%;
     }
-    #splide3 .imgBox{
+    #splide3 .imgBox {
         background: white;
         padding: 15px;
         border-left: 4px solid black;
@@ -470,7 +472,24 @@ span.spbottom {
         margin-top: -84px;
         z-index: 5;
         position: relative;
+        height: 160px;
+        overflow: auto;
     }
+    .imgBox::-webkit-scrollbar {
+        width: 8px;
+      }
+       
+      .imgBox::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        
+      }
+       
+      .imgBox::-webkit-scrollbar-thumb {
+        background-color: #7e80a2;
+        /* outline: 1px solid #030047; */
+        border-radius: 10px;
+    
+      }
     #splide3 .imgBox h4 {
         font-size: 25px;
     }
@@ -494,7 +513,7 @@ span.spbottom {
     }
     .sec2-Topnotch .container-fluid {
         width: 90%;
-        margin-left: auto;
+        margin: 0 auto;
         padding: 40px 0px;
     }
     .splide_slide_box {
@@ -662,9 +681,6 @@ span.spbottom {
         display: flex;
         justify-content: center;
     }
-    .about-content {
-        padding: 4rem 0;
-    }
     .sec4-about .aboutbook img {
         width: 100%;
     }
@@ -687,9 +703,7 @@ span.spbottom {
     .Blog .navcta .btn2 {
         background-color: #017b8a;
     }
-    .sec4-about .row2 {
-        margin-top: -130px;
-    }
+    
     .Blog {
         padding-top: 6rem;
     }
@@ -822,7 +836,8 @@ span.spbottom {
      .cards-inner {
         box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
         padding: 15px 30px;
-        height: 172px;
+        height: 315px;
+
      }
      .cards-inner p {
         font-size: 14px;
@@ -924,7 +939,11 @@ span.spbottom {
         height: auto;
         padding: 3rem 0;
      }
-    
+     .sec8-footer h2 {
+        font-size: 40px;
+        color: #fff;
+        padding-left: 13px;
+     }
      .footer-inner {
         background-color: #030047;
      }
